tests/snapshots/test_edit__adr_set_decision.snap
---
source: tests/edit_tests/adr.rs
expression: value
---
$ govctl adr new Test Decision
Created ADR: gov/adr/ADR-XXXX-test-decision.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option A
Added 'Option A' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option B
Added 'Option B' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0] --tick accepted
Marked 'Option A' as accepted
exit: 0

$ govctl adr edit ADR-0001 alternatives[1] --tick rejected
Marked 'Option B' as rejected
exit: 0

$ govctl adr edit ADR-0001 decision --set We decided to do X
Set ADR-0001.decision = We decided to do X
exit: 0

$ govctl adr show ADR-0001
# ADR-0001: Test Decision

> **Status:** proposed | **Date:** <DATE>

## Context

Describe the context and problem statement.
What is the issue that we're seeing that is motivating this decision?

## Decision

We decided to do X

## Consequences

Describe the resulting context after applying the decision.
What becomes easier or more difficult to do because of this change?

## Alternatives Considered

### Option A (accepted)


### Option B (rejected)
exit: 0
