tests/snapshots/test_edit__adr_set_nested_path.snap
---
source: tests/edit_tests/path_cases/nested_adr.rs
expression: value
---
$ govctl adr new Set Test
Created ADR: gov/adr/ADR-XXXX-set-test.toml
exit: 0

$ govctl adr edit ADR-0001 alternatives --add Option A
Added 'Option A' to ADR-0001.alternatives
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros --add Fast
Added 'Fast' to ADR-0001.alternatives[0].pros
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].cons --add Fragile
Added 'Fragile' to ADR-0001.alternatives[0].cons
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].text --set Option A Revised
Set ADR-0001.alternatives[0].text = Option A Revised
exit: 0

$ govctl adr get ADR-0001 alternatives[0].text
Option A Revised
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].pros[0] --set Very fast
error[E0817]: Path does not support verb 'set' (ADR-0001)
exit: 1

$ govctl adr get ADR-0001 alternatives[0].pros[0]
Fast
exit: 0

$ govctl adr edit ADR-0001 alternatives[0].rejection_reason --set Superseded by Option B
Set ADR-0001.alternatives[0].rejection_reason = Superseded by Option B
exit: 0

$ govctl adr get ADR-0001 alternatives[0].rejection_reason
Superseded by Option B
exit: 0
