tests/snapshots/test_edit__adr_set_title.snap
---
source: tests/edit_tests/adr.rs
expression: value
---
$ govctl adr new Original Title
Created ADR: gov/adr/ADR-XXXX-original-title.toml
exit: 0

$ govctl adr edit ADR-0001 title --set New Title
Set ADR-0001.title = New Title
exit: 0

$ govctl adr list
┌──────────┬──────────┬────────────┬───────────┐
│ ADR      ┆ Status   ┆ Date       ┆ Title     │
╞══════════╪══════════╪════════════╪═══════════╡
│ ADR-0001 ┆ proposed ┆ <DATE> ┆ New Title │
└──────────┴──────────┴────────────┴───────────┘
exit: 0
