tests/snapshots/test_edit__clause_edit_nonexistent.snap
---
source: tests/edit_tests/clause.rs
expression: value
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl clause edit RFC-0001:C-NONEXISTENT text --set Text
error[E0202]: Clause not found: RFC-0001:C-NONEXISTENT (gov/rfc/RFC-0001/clauses)
exit: 1
