tests/snapshots/test_edit__clause_get_field.snap
---
source: tests/test_edit.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl clause new RFC-0001:C-TEST Test Clause -s Specification -k normative
Created clause: gov/rfc/RFC-0001/clauses/C-TEST.toml
  Added to section 'Specification', path: clauses/C-TEST.toml
exit: 0

$ govctl clause get RFC-0001:C-TEST title
Test Clause
exit: 0

$ govctl clause get RFC-0001:C-TEST kind
normative
exit: 0

$ govctl clause get RFC-0001:C-TEST status
active
exit: 0
