tests/snapshots/test_edit__clause_set_text_sugar.snap
---
source: tests/test_edit.rs
assertion_line: 391
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl clause new RFC-0001:C-TEST Test Clause -s Specification -k normative
Created clause: gov/rfc/RFC-0001/clauses/C-TEST.toml
  Added to section 'Specification', path: clauses/C-TEST.toml
exit: 0

$ govctl clause set RFC-0001:C-TEST text new text
Set RFC-0001:C-TEST.text = new text
exit: 0

$ govctl clause show RFC-0001:C-TEST
### [RFC-0001:C-TEST] Test Clause (Normative)

new text
exit: 0
