tests/snapshots/test_edit__clause_set_title.snap
---
source: tests/edit_tests/clause.rs
expression: value
---
$ govctl rfc new Test RFC
Created RFC: gov/rfc/RFC-0001/rfc.toml
  Clauses dir: gov/rfc/RFC-0001/clauses
exit: 0

$ govctl clause new RFC-0001:C-TEST Original Title -s Specification -k normative
Created clause: gov/rfc/RFC-0001/clauses/C-TEST.toml
  Added to section 'Specification', path: clauses/C-TEST.toml
exit: 0

$ govctl clause edit RFC-0001:C-TEST title --set New Title
Set RFC-0001:C-TEST.title = New Title
exit: 0

$ govctl clause show RFC-0001:C-TEST
### [RFC-0001:C-TEST] New Title (Normative)

TODO: Add clause text here.
exit: 0
