tests/snapshots/test_edit__field_alias_ac.snap
---
source: tests/test_edit.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work new Test Task
Created work item: gov/work/<DATE>-test-task.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work add WI-<DATE>-001 ac add: Test criterion
Added 'add: Test criterion' to WI-<DATE>-001.acceptance_criteria
exit: 0

$ govctl work get WI-<DATE>-001 ac
[pending] Test criterion
exit: 0
